# sample-factory

./: .core-coveragerc  .flake8  .gitignore  .mrunnerignore  .pre-commit-config.yaml  .travis.yml  404.html  CNAME  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  all_tests.sh  enjoy.py  enjoy_pytorch.py  enjoy_rllib.py  environment.yml  environment_pytorch1.4.yml  environment_pytorch1.6_experimental.yml  environment_pytorch_1.4.yml  fast_queue.pyx  fast_queue_def.pxd  generic-environment.yml  generic_env1.6.yml  huggingface_utils.py  index.html  kill_proc.sh  mkdocs.yml  mrunner.yaml  mrunner_run.py  pyproject.toml  requirements.txt  run_algorithm.py  samplefactory_hub_example.ipynb  sandbox.py  setup.py  sf2.txt  tb.py  train.py  (+3 more)
.travis/: environment.yml  patchfile.patch
algorithms/: algorithm.py
baselines/: impala_notes.txt
benchmarks/: benchmarking.txt  benchmarking_xeon_36core.txt
docs/: cfg-params.sh  index.md
envs/: create_env.py  env_config.py  env_registry.py  env_utils.py  env_wrappers.py  ray_envs.py
examples/: enjoy_custom_env_custom_model.py  enjoy_gym_env.py  train_custom_env_custom_model.py  train_gym_env.py
experiments/: doom-appo-cnn-vs-rnn.yaml  doom-appo-continuous-vs-discrete.yaml  doom-appo-dwango5-bots-experimental.yaml  doom-appo-dwango5-bots-frameskip.yaml  doom-ppo.yaml  (+17 more)
sf_examples/nethack/nethack_render_utils/: CMakeLists.txt  setup.py  test.py
sf_examples/nethack/nethack_render_utils/src/: main.cpp
sf_examples/nethack/render_utils/: CMakeLists.txt  setup.py  test.py
sf_examples/nethack/render_utils/src/: main.cpp
(+3882 files in other folders)
